--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "author": "",
   "dependencies": {
-    "express": "^4.17.1",
-    "@opentelemetry/tracing": "0.9.0",
+    "@google-cloud/opentelemetry-cloud-trace-exporter": "0.3.0",
+    "@opentelemetry/exporter-zipkin": "^0.9.0",
     "@opentelemetry/metrics": "0.9.0",
-    "@google-cloud/opentelemetry-cloud-trace-exporter": "0.3.0"
+    "@opentelemetry/tracing": "^0.9.0",
+    "express": "^4.17.1",
+    "opentelemetry-base": "file:../opentelemetry-js",
+    "perf_hooks": "0.0.1"
   }
 }
