--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@opentelemetry/metrics": "0.9.0",
     "@opentelemetry/tracing": "^0.9.0",
     "express": "^4.17.1",
-    "perf_hooks": "0.0.1"
+    "perf_hooks": "0.0.1",
+    "lerna":"^3.22.1"
   }
 }
